--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -34,6 +34,7 @@ jobs:
 
   second-job:
     runs-on: ubuntu-latest
+    needs: display-system-info
     steps:
       - name: list Files
         run : ls -a 
