Rename job and update workflow steps

--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -4,40 +4,22 @@ name: System Information Check
 on: workflow_dispatch
 
 jobs:
-  display-system-info:
+  first-job:
     # Fix: Ensure this is spelled 'ubuntu-latest'
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print OS Information
-        run: |
-          echo "### Operating System Details ###"
-          lsb_release -a
-          uname -a
-
-      - name: Print Hardware Resources
-        run: |
-          echo "### CPU Information ###"
-          lscpu | grep "Model name"
-          echo "### Memory (RAM) ###"
-          free -h
-          echo "### Disk Space ###"
-          df -h | grep "^/dev/"
-
-      - name: Check Installed Tools
-        run: |
-          echo "### Pre-installed Software versions ###"
-          node -v
-          python3 --version
-          docker -v
-          git --version
+       - name: expression 
+         run : ${{4 > 2}}
+      
 
   second-job:
     runs-on: ubuntu-latest
-    needs: display-system-info
+    needs: first-job
     steps:
       - name: list Files
         run : ls -a 
+        
       
       - uses: actions/checkout@v6
       - name: list files
