Enhance workflow with context object outputs
Added steps to output GitHub and environment context objects.

--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-       - name: expression 
-         run : ${{4 > 2}}
-      
-
+       - name: github context object 
+         run : ${{toJson(github)}}
+       - name: env context obj
+         run : ${{toJson(env)}}
+    
   second-job:
     runs-on: ubuntu-latest
     needs: first-job
