--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -10,9 +10,13 @@ jobs:
 
     steps:
        - name: github context object 
-         run : ${{toJson(github)}}
+         run : echo "${{toJson(github)}}"
        - name: env context obj
-         run : ${{toJson(env)}}
+         run : echo  "${{toJson(env)}}"
+       - name: secrets 
+         run: echo "${{toJson(secrets)}}"
+       - name: runner     
+         run : echo "${{toJson(runner)}}"
     
   second-job:
     runs-on: ubuntu-latest
